# cutsy-editor

./: .eslintrc  .stylelintrc.json  CHANGELOG.md  README.md  package-lock.json  package.json  vite.config.ts
.github/actions/tauri-setup/: action.yml
.github/workflows/: branch.yml  main.yml  release.yml
src/: App.module.scss  App.tsx  Button.module.scss  Button.tsx  Clilp.tsx  ContextApp.tsx  ContextSettings.tsx  Debug.tsx  EditorHelp.module.scss  EditorHelp.tsx  GateFfmpeg.module.scss  GateFfmpeg.tsx  H.tsx  Icon.tsx  KeyboardShortcuts.module.scss  KeyboardShortcuts.tsx  Loading.tsx  Name.module.scss  Name.tsx  Page.module.scss  Page.tsx  PageHeader.module.scss  PageHeader.tsx  PageNumbers.module.scss  PageNumbers.tsx  Queue.tsx  Spinner.module.scss  Spinner.tsx  Title.tsx  ViewDebug.module.scss  ViewDebug.tsx  ViewEdit.module.scss  ViewEdit.tsx  ViewError.module.scss  ViewError.tsx  ViewIndex.module.scss  ViewIndex.tsx  ViewQueue.module.scss  ViewQueue.tsx  ViewRoot.module.scss  (+25 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
