[package]
name = "cutsy-editor"
version = "0.0.0"
description = "a lil video clip editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "window-close", "dialog-confirm", "dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-read-dir", "path-all", "protocol-asset", "shell-open", "window-set-fullscreen", "window-set-title"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ffmpeg-sidecar = "0.4.1"
thiserror = "1.0.40"
tauri-plugin-persisted-scope = { version = "0.1.3", features = ["protocol-asset"] }
showfile = "0.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
